基本功 url变更

--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
     <div class="home-section basic-skills">
         <div class="container">
             <div class="home-section-header">
-                <a href="-course_type=all&tag=all&fee=free.htm">
+                <a href="base.htm">
                 <span class="home-section-title">基本功<span>|</span></span>
                 <span class="home-section-desc">基础内容</span>
             </div>
