--- a/index.htm
+++ b/index.htm
@@ -11,8 +11,8 @@
     <meta http-equiv="Cache-Control" content="o-transform">
     <meta http-equiv="Cache-Control" content="no-siteapp">
 
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                                 style="display:none"></i>
                         </div>
                         <div class="course-img">
-                            <img alt="Linux 基础入门" src="ncn1.jpg">
+                            <img alt="Linux 基础入门" src="img/ncn1.jpg">
                         </div>
                         <div class="course-body">
                             <div class="course-name">Linux 基础入门</div>
@@ -52,7 +52,7 @@
                                 style="display:none"></i>
                         </div>
                         <div class="course-img">
-                            <img alt="Vim编辑器" src="ncn2.jpg">
+                            <img alt="Vim编辑器" src="img/ncn2.jpg">
                         </div>
                         <div class="course-body">
                             <div class="course-name">Vim编辑器</div>
@@ -71,7 +71,7 @@
                                 style="display:none"></i>
                         </div>
                         <div class="course-img">
-                            <img alt="R 语言基础入门" src="1499827625083.png">
+                            <img alt="R 语言基础入门" src="img/1499827625083.png">
                         </div>
                         <div class="course-body">
                             <div class="course-name">R 语言基础入门</div>
@@ -90,7 +90,7 @@
                                 style="display:none"></i>
                         </div>
                         <div class="course-img">
-                            <img alt="MySQL 基础课程" src="ncn9.jpg">
+                            <img alt="MySQL 基础课程" src="img/ncn9.jpg">
                         </div>
                         <div class="course-body">
                             <div class="course-name">MySQL 基础课程</div>
@@ -116,7 +116,7 @@
             <div class="row learn-path-body">
                 <div class="col-md-3">
                     <a class="learn-path-item" href="newhand.htm">
-                        <img src="1487741005890.png">
+                        <img src="img/1487741005890.png">
                         <div class="learn-path-name">新手入门</div>
                         <div class="learn-path-courses">
                             16门课程
@@ -125,7 +125,7 @@
                 </div>
                 <div class="col-md-3">
                     <a class="learn-path-item" href="python.htm">
-                        <img src="1487741028787.png">
+                        <img src="img/1487741028787.png">
                         <div class="learn-path-name">Python研发工程师</div>
                         <div class="learn-path-courses">
                             96门课程
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-md-3">
                     <a class="learn-path-item" href="bigdata.htm">
-                        <img src="1487741070013.png">
+                        <img src="img/1487741070013.png">
                         <div class="learn-path-name">大数据工程师</div>
                         <div class="learn-path-courses">
                             46门课程
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-md-3">
                     <a class="learn-path-item" href="linuxdev.htm">
-                        <img src="1487741227106.png">
+                        <img src="img/1487741227106.png">
                         <div class="learn-path-name">Linux研发工程师</div>
                         <div class="learn-path-courses">
                             32门课程
@@ -166,7 +166,7 @@
                 <div class="col-md-3">
                     <a class="recommend-courses-item" href="ubuntu.htm" >
                         <div class="try-img">
-                            <img src="ubuntu.png" data-width="80" data-height="80" class="resize-img" style="width: 80px; height: 80px; opacity: 1;">
+                            <img src="img/ubuntu.png" data-width="80" data-height="80" class="resize-img" style="width: 80px; height: 80px; opacity: 1;">
                         </div>
                         <div class="trylab-software-name">Ubuntu</div>
                         <div class="trylab-software-desc">Ubuntu 是以桌面应用为主的Linux发行版，基于Debian发行版和GNOME桌面环境。与Debian的不同在于它每6个月会发布一个新版本（即每年的四月与十月)，每2年发布一个LTS长期支持版本。普通的桌面版可以获得发布后18个月内的支持，标为LTS（长期支持）的桌面版可以获得更长时间的支持。</div>
@@ -176,7 +176,7 @@
                 <div class="col-md-3">
                     <a class="recommend-courses-item" href="django.htm">
                         <div class="try-img">
-                            <img src="django.png" data-width="80" data-height="80" class="resize-img" style="width: 80px; height: 80px; opacity: 1;">
+                            <img src="img/django.png" data-width="80" data-height="80" class="resize-img" style="width: 80px; height: 80px; opacity: 1;">
                         </div>
                         <div class="trylab-software-name">Django</div>
                         <div class="trylab-software-desc">Django是一个非常流行的Python Web应用框架，采用了MVC的软件设计模式。MVC 即模型M，视图V和控制器C。Django的主要目标是使得开发复杂的、数据库驱动的网站变得简单。Django注重组件的重用性和“可插拔性”，敏捷开发和DRY法则（Don&#39;t
@@ -187,7 +187,7 @@
                 <div class="col-md-3">
                     <a class="recommend-courses-item" href="nginx.htm" >
                         <div class="try-img">
-                            <img src="nginx.png" data-width="80" data-height="80" class="resize-img" style="width: 80px; height: 80px; opacity: 1;">
+                            <img src="img/nginx.png" data-width="80" data-height="80" class="resize-img" style="width: 80px; height: 80px; opacity: 1;">
                         </div>
                         <div class="trylab-software-name">Nginx</div>
                         <div class="trylab-software-desc">Nginx是一款高性能的HTTP和反向代理服务器软件，第一个开源版本诞生于2004年，经过十多年的发展，已经成为非常流行的web服务器软件。Nginx 具备轻量级，性能强，支持热部署，负载均衡，具备很强大的代理功能等特点。</div>
@@ -197,7 +197,7 @@
                 <div class="col-md-3">
                     <a class="recommend-courses-item" href="apache.htm" >
                         <div class="try-img">
-                            <img src="apache.jpg" data-width="80" data-height="80" class="resize-img" style="width: 80px; height: 80px; opacity: 1;">
+                            <img src="img/apache.jpg" data-width="80" data-height="80" class="resize-img" style="width: 80px; height: 80px; opacity: 1;">
                         </div>
                         <div class="trylab-software-name">Apache</div>
                         <div class="trylab-software-desc">Apache HTTP Server（简称Apache）是Apache基金会的一个开放源代码的网页服务器软件。可以在大多数电脑操作系统中运行，由于其跨平台和安全性，被广泛使用，是最流行的Web服务器软件之一，具备快速、可靠并且可通过简单的API扩充等特性。</div>
