--- a/index.html
+++ b/index.html
@@ -5,4 +5,10 @@
 <a href="https://attachments-cdn.shimo.im/AGDsRwhbXtmXvDBC.exe" target="_blank" rel="noopener noreferrer">rufus3.10p.exe</a><br>
 <a href="https://attachments-cdn.shimo.im/UGiQBkejIQxkjLcR.exe" target="_blank" rel="noopener noreferrer">W10 Digital Activation 1.3.exe</a><br>
 <a href="https://attachments-cdn.shimo.im/4Oqw6WPNE1zJeIpb.exe" target="_blank" rel="noopener noreferrer">SGImini.exe</a><br>
-
+<!-- TeamViewer Logo (generated at https://www.teamviewer.com) -->
+<div style="position:relative; width:234px; height:60px;">
+    <a href="https://www.teamviewer.com/link/?url=505374&id=1593511124292" style="text-decoration:none;">
+        <img src="https://static.teamviewer.com/resources/badges/teamviewer_badge_flat4.png" alt="使用TeamViewer进行远程支持" title="使用TeamViewer进行远程支持" border="0" width="234" height="60" />
+    </a>
+</div>
+      
