--- a/index.html
+++ b/index.html
@@ -1,16 +1,509 @@
-<a href="https://attachments-cdn.shimo.im/GWNadazplWWGqhD5.exe" target="_blank" rel="noopener noreferrer">向日葵.exe</a><br>
-<a href="https://attachments-cdn.shimo.im/7h1gdHYZqjUxmLwK.exe" target="_blank" rel="noopener noreferrer">WIN7Activation.exe</a><br>
-<a href="https://attachments-cdn.shimo.im/ZIIQ0H9UOzw422Dg.exe" target="_blank" rel="noopener noreferrer">KMS10.exe</a><br>
-<a href="https://attachments-cdn.shimo.im/7sd6HWFOhrYRIwMZ.exe" target="_blank" rel="noopener noreferrer">天猫.exe</a><br>
-<a href="https://attachments-cdn.shimo.im/AGDsRwhbXtmXvDBC.exe" target="_blank" rel="noopener noreferrer">rufus3.10p.exe</a><br>
-<a href="https://attachments-cdn.shimo.im/UGiQBkejIQxkjLcR.exe" target="_blank" rel="noopener noreferrer">W10 Digital Activation 1.3.exe</a><br>
-<a href="https://attachments-cdn.shimo.im/4Oqw6WPNE1zJeIpb.exe" target="_blank" rel="noopener noreferrer">SGImini.exe</a><br>
-<!-- TeamViewer Logo (generated at https://www.teamviewer.com) -->
-<div style="position:relative; width:120px; height:60px;">
-    <a href="	https://898.tv/6acvdjm" style="text-decoration:none;">
-      <img src="https://static.teamviewer.com/resources/badges/teamviewer_badge_flat5.png" alt="使用TeamViewer进行远程支持" title="使用TeamViewer进行远程支持" border="0" width="120" height="60" />
-      <span style="position:absolute; top:37.5px; left:10px; display:block; cursor:pointer; color:White; font-family:Arial; font-size:11px; line-height:1.2em; font-weight:bold; text-align:center; width:105px;">
-        远程支持
-      </span>
-    </a>
-</div>  
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="keywords" content="常用软件" />
+    <title>我要修电脑-常用软件下载</title>
+    <style type="text/css">
+        html,
+        body,
+        div,
+        dl,
+        dt,
+        dd,
+        ul,
+        ol,
+        li,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        pre,
+        code,
+        form,
+        fieldset,
+        legend,
+        input,
+        textarea,
+        p,
+        blockquote,
+        th,
+        td {
+            margin: 0;
+            padding: 0;
+            font-family: Helvetica, Tahoma, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", STXihei, STHeiti, Heiti, SimSun, sans-serif;
+            font-size: 100%;
+        }
+
+        html,
+        body {
+            color: #333
+        }
+
+        body {
+            background: #fff;
+        }
+
+        ul,
+        ol,
+        li {
+            list-style: none;
+        }
+
+        a:link,
+        a:visited {
+            color: #333;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: #666;
+            text-decoration: none;
+        }
+
+        img {
+            border: none;
+        }
+
+        em {
+            font-style: normal;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5 {
+            font-weight: normal;
+        }
+
+        .downWrap {
+            width: 980px;
+            margin: 0 auto;
+            padding-top: 60px;
+            background: #fff;
+        }
+
+        .recommonDown {
+            width: 979px;
+            min-height: 314px;
+            margin-bottom: 40px;
+            border-top: 1px solid #e7e7e7;
+            border-left: 1px solid #e7e7e7;
+        }
+
+        .recommonDown .rcwrap {
+            float: left;
+            width: 325px;
+            border-right: 1px solid #e7e7e7;
+            border-bottom: 1px solid #e7e7e7;
+        }
+
+        .recommonDown .rcpad {
+            width: 326px;
+        }
+
+        .rcclick {
+            display: block;
+            width: 100%;
+            height: 175px;
+            overflow: hidden;
+            text-align: center;
+        }
+
+        .rcwrap h2 {
+            height: 70px;
+            text-align: center;
+            line-height: 70px;
+        }
+
+        .rcwrap h2 strong {
+            font-size: 22px;
+        }
+
+        .rcwrap h2 em {
+            font-size: 14px;
+        }
+
+        .rcwrap h2 span {
+            color: #979797;
+        }
+
+        .rcwrap h2 span.on {
+            color: #000;
+        }
+
+        .lbtn {
+            width: 142px;
+            height: 68px;
+            margin: 0 auto;
+            text-align: center;
+            font-size: 14px;
+        }
+
+        .lbtn em {
+            display: block;
+            height: 20px;
+            line-height: 17px;
+            color: #848484;
+            font-size: 12px;
+        }
+
+        .down_btn_126x30 {
+            display: block;
+            width: 126px;
+            height: 30px;
+            margin: 0 auto;
+            background: transparent url("images/down_btn_126x30.png")
+                no-repeat 0 0;
+            line-height: 30px;
+        }
+
+        .down_btn_126x30:hover {
+            background-position: 0 bottom;
+        }
+
+        .down_btn_126x30 span {
+            padding-left: 24px;
+            color: #fff;
+            letter-spacing: 0.12em;
+        }
+
+        .tim .down_btn_126x30 span {
+            padding-left: 0px;
+            background: none;
+        }
+
+        .flbtn {
+            width: 284px;
+            margin: 0 auto;
+        }
+
+        .flbtn .lbtn {
+            float: left;
+        }
+
+        .drwrap {
+            position: relative;
+            width: 100%;
+            height: 30px;
+        }
+
+        /* other products */
+        .otherpro {
+            width: 979px;
+            min-height: 290px;
+            margin-bottom: 40px;
+            border-top: 1px solid #e7e7e7;
+            border-left: 1px solid #e7e7e7;
+        }
+
+        .proh2 {
+            height: 37px;
+            line-height: 19px;
+            font-size: 18px;
+        }
+
+        .otherpro ul {
+            width: 980px;
+            margin-right: -1px;
+            overflow: auto;
+            zoom: 1;
+        }
+
+        .otherpro li {
+            float: left;
+            width: 489px;
+            border-right: 1px solid #e7e7e7;
+            border-bottom: 1px solid #e7e7e7;
+        }
+
+        .otherpro li .prolist {
+            float: left;
+            height: 68px;
+            padding: 29px 0 0 97px;
+        }
+
+        .otherpro li .ios {
+            background: transparent url("icons/mac_icon.png")
+                /*tpa=https://sqimg.qq.com/qq_product_operations/im/2015/mac_icon.png*/
+                no-repeat 30px center;
+        }
+
+        .otherpro li .ipc {
+            background: transparent url("icons/pc_icon.png")
+                /*tpa=https://sqimg.qq.com/qq_product_operations/im/2015/pc_icon.png*/
+                no-repeat 20px center;
+        }
+
+        .otherpro li .and {
+            background: transparent url("icons/and_icon.png")
+                /*tpa=https://sqimg.qq.com/qq_product_operations/im/2015/and_icon.png*/
+                no-repeat 30px center;
+        }
+
+        .otherpro li .wp {
+            background: transparent url("icons/wp_icon.png")
+                /*tpa=https://sqimg.qq.com/qq_product_operations/im/2015/wp_icon.png*/
+                no-repeat 32px center;
+        }
+
+        .otherpro li .qf {
+            background: transparent url("icons/qf_icon.png")
+                /*tpa=https://sqimg.qq.com/qq_product_operations/im/2015/qf_icon.png*/
+                no-repeat 31px center;
+        }
+
+        .otherpro li .qqdocs {
+            background: transparent url("icons/qqdocs-icon.png")
+                /*tpa=https://sqimg.qq.com/qq_product_operations/im/2018/qqdocs-icon.png*/
+                no-repeat 24px center;
+        }
+
+
+
+        .otherpro li .hwidgen {
+            background: transparent url("icons/hwidgen.png")
+                no-repeat 24px center;
+        }
+
+        .otherpro li .kms10 {
+            background: transparent url("icons/kms10.png")
+                no-repeat 24px center;
+        }
+
+        .otherpro li .rufus {
+            background: transparent url("icons/rufus.png")
+                no-repeat 24px center;
+        }
+
+        .otherpro li .sgimini {
+            background: transparent url("icons/sgimini.png")
+                no-repeat 24px center;
+        }
+
+        .otherpro li .ThunderMacmini {
+            background: transparent url("icons/ThunderMacmini.png")
+                no-repeat 24px center;
+        }
+
+        .otherpro li .ThunderPC {
+            background: transparent url("icons/ThunderPC.png")
+                no-repeat 24px center;
+        }
+
+        .otherpro li .tmall {
+            background: transparent url("icons/tmall.png")
+                no-repeat 24px center;
+        }
+
+        .otherpro li .Win7Activation {
+            background: transparent url("icons/Win7Activation.png")
+                no-repeat 24px center;
+        }
+
+        .otherpro li .Win10Activation {
+            background: transparent url("icons/Win10Activation.png")
+                no-repeat 24px center;
+        }
+
+
+        .otherpro li .ql {
+            background: transparent url("icons/logo.png")
+                no-repeat 32px center;
+        }
+
+        .otherpro li .xl {
+            background: transparent url("icons/ThunderMacl.png")
+                no-repeat 32px center;
+        }
+
+        .prolist h2 {
+            height: 25px;
+        }
+
+        .prolist h2 strong {
+            margin-right: 10px;
+            font-size: 17px;
+        }
+
+        .prolist h2 em {
+            font-size: 12px;
+            color: #737373;
+        }
+
+        .prolist p {
+            font-size: 14px;
+            color: #737373;
+        }
+
+        .otherpro li a.btn78x31 {
+            float: right;
+            width: 78px;
+            height: 31px;
+            margin: 34px 20px 0 0;
+            background: transparent url("images/down_btn.png")
+                no-repeat 0 0;
+            text-align: center;
+            line-height: 32px;
+            color: #fff;
+            font-size: 14px;
+            letter-spacing: 0.12em;
+        }
+    </style>
+</head>
+
+<body>
+    <!--S download-->
+    <div class="downWrap">
+        <div class="recommonDown">
+            <!--卡片一-->
+            <div class="rcwrap tim">
+                <a class="rcclick imgandurl" href="https://www.teamviewer.cn/cn/download/">
+                    <img src="images/tmcard.jpg">
+                </a>
+                <h2>
+                    <strong>
+                        <a class="wordAndUrl" href="https://www.teamviewer.cn/cn/download/">TeamViewer</a>
+                    </strong> 
+                    <em class="dver justword">15.7.6<sup><img src="images/newicon.jpg"></sup></em>
+                </h2>
+                <div class="lbtn">
+                    <em class="date">2020-3-31</em>
+                    <a class="down_btn_126x30 wordAndUrl okmemo-tmp-unselect" href="https://898.tv/6acvdjm"><span>自动检测下载</span></a>
+                </div>
+            </div>
+            <!--卡片二-->
+            <div class="rcwrap tim">
+                <a class="rcclick imgandurl" href="https://sunlogin.oray.com/download">
+                    <img src="images/xrkcard.jpg">
+                </a>
+                <h2>
+                    <strong>
+                        <a class="wordAndUrl" href="https://sunlogin.oray.com/download">向日葵</a>
+                    </strong>
+                    <em class="dver justword">10.5.0<sup><img src="images/newicon.jpg"></sup></em>
+                </h2>
+                <div class="flbtn" id="mbdown">
+                    <div class="lbtn">
+                        <em class="date">2020-06-12</em>
+                        <div id="drwrap" class="drwrap">
+                            <a class="down_btn_126x30 andd" href="http://dl-cdn.oray.com/sunlogin/windows/SunloginClient_10.5.0.29613.exe"><span>Windows下载</span></a>
+                        </div>
+                    </div>
+                    <div class="lbtn">
+                        <em class="date">2020-06-15</em>
+                        <a class="down_btn_126x30 iosd" href="http://download.oray.com/sunlogin/mac/SunloginClient9.8.dmg"><span>macOS下载</span></a>
+                    </div>
+                </div>
+            </div>
+            <!--卡片三-->
+            <div class="rcwrap tim">
+                <a class="rcclick imgandurl" href="https://anydesk.com/zhs/downloads">
+                    <img src="images/anydeskcard.jpg">
+                </a>
+
+                <h2>
+                    <strong>
+                        <a class="wordAndUrl" href="https://anydesk.com/zhs/downloads">AnyDesk</a>
+                    </strong> 
+                    <em class="dver justword">5.5.3.0</em>
+                </h2>
+                <div class="flbtn" id="mbdown">
+                    <div class="lbtn">
+                        <em class="date">2020-06-12</em>
+                        <div class="drwrap">
+                            <a class="down_btn_126x30 andd" href="https://download.anydesk.com/AnyDesk.exe"><span>Windows下载</span></a>
+                        </div>
+                    </div>
+                    <div class="lbtn">
+                        <em class="date">2020-06-15</em>
+                        <a class="down_btn_126x30 iosd" href="https://download.anydesk.com/anydesk.dmg"><span>macOS下载</span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--软件列表-->
+        <h2 class="proh2">常用软件</h2>
+
+        <div class="otherpro" style="margin-bottom:20px">
+            <ul>
+                <li>
+                    <div class="prolist tmall">
+                        <h2>
+                            <strong>
+                                <a class="wordAndUrl" href="https://attachments-cdn.shimo.im/7sd6HWFOhrYRIwMZ.exe">天猫一键装机</a>
+                            </strong>
+                            <em class="date">2020-06-15</em>
+                        </h2>
+                        <p class="justword">远程系统安装维护工具</p>
+                    </div>
+                    <a class="forTcss btn78x31 wordAndUrl" href="https://attachments-cdn.shimo.im/7sd6HWFOhrYRIwMZ.exe">下载</a>
+                </li>
+                <li>
+                    <div class="prolist hwidgen">
+                        <h2>
+                            <strong>
+                                <a class="wordAndUrl" href="https://cmwtat.cloudmoe.com">Windows10数字权利</a>
+                            </strong>
+                            <em class="date">2014-01-22</em>
+                        </h2>
+                        <p class="justword">一键获取Win10数字权利</p>
+                    </div>
+                    <a href="https://github.com/TGSAN/CMWTAT_Digital_Edition/releases" class="btn78x31 wordAndUrl">下载</a>
+                </li>
+                <li>
+                    <div class="prolist Win7Activation">
+                        <h2>
+                            <strong>Win7Activation</strong>
+                            <em class="date">2020-04-23</em>
+                        </h2>
+                        <p>Win7Activation</p>
+                    </div>
+                    <a class="btn78x31 wordAndUrl" href="https://attachments-cdn.shimo.im/7h1gdHYZqjUxmLwK.exe">下载</a>
+                </li>
+                <li>
+                    <div class="prolist Win10Activation">
+                        <h2>
+                            <strong>
+                                <a class="wordAndUrl" href="https://attachments-cdn.shimo.im/UGiQBkejIQxkjLcR.exe">Windows10数字权利工具</a>
+                            </strong>
+                            <em class="date">2017-05-03</em></h2>
+                        <p>HWID&KMS支持</p>
+                    </div>
+                    <a class="btn78x31" href="https://attachments-cdn.shimo.im/UGiQBkejIQxkjLcR.exe">下载</a>
+                </li>
+                <li>
+                    <div class="prolist rufus">
+                        <h2>
+                            <strong>
+                                <a class="wordAndUrl" href="http://rufus.ie/">rufus</a>
+                            </strong>
+                            <em class="date">2017-05-03</em>
+                        </h2>
+                        <p>启动U盘快速制作工具</p>
+                    </div>
+                    <a class="btn78x31 wordAndUrl" href="https://attachments-cdn.shimo.im/AGDsRwhbXtmXvDBC.exe">下载</a>
+                </li>
+                <li>
+                    <div class="prolist sgimini">
+                        <h2>
+                            <strong>
+                                <a class="wordAndUrl" href="https://www.sysceo.com/">映像总裁一键装机</a>
+                            </strong>
+                            <em class="date">2020-06-09</em>
+                        </h2>
+                        <p>一键快速硬盘安装系统</p>
+                    </div>
+                    <a class="btn78x31 wordAndUrl" href="https://attachments-cdn.shimo.im/4Oqw6WPNE1zJeIpb.exe">下载</a>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+    <!--E download-->
+</body>
+</html>
