--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 </h2>
                 <div class="lbtn">
                     <em class="date">2020-3-31</em>
-                    <a class="down_btn_126x30 wordAndUrl okmemo-tmp-unselect" href="https://898.tv/6acvdjm"><span>自动检测下载</span></a>
+                    <a class="down_btn_126x30 wordAndUrl okmemo-tmp-unselect" href="https://get.teamviewer.com/6acvdjm"><span>自动检测下载</span></a>
                 </div>
             </div>
             <!--卡片二-->
